--- a/invoices/SAPUI5/webapp/view/InvoicesList.view.xml
+++ b/invoices/SAPUI5/webapp/view/InvoicesList.view.xml
@@ -1,7 +1,12 @@
 <mvc:View controllerName="logaligroup.SAPUI5.controller.InvoicesList" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc">
-    <List id="invoiceList" headerText="{i18n>invoiceListTitle}" class="sapUiResponsiveMargin" width="auto" items="{ path : 'invoices>/Invoices',
-                                                                                                                    sorter : {path : 'ShipperName',
-                                                                                                                              group : true }}">
+    <List
+        id="invoiceList"
+        headerText="{i18n>invoiceListTitle}"
+        class="sapUiResponsiveMargin"
+        width="auto"
+        items="{ path : 'northwind>/Invoices',
+                 sorter : {path : 'ShipperName',
+                           group : true }}">
         <headerToolbar>
             <Toolbar>
                 <Title text="{i18n>invoiceListTitle}" />
@@ -11,18 +16,14 @@
         </headerToolbar>
         <items>
             <ObjectListItem
-                title="{invoices>Quantity} x {invoices>ProductName}"
-                number="{ parts : [ {path : 'invoices>ExtendedPrice'},
+                title="{northwind>Quantity} x {northwind>ProductName}"
+                number="{ parts : [ {path : 'northwind>ExtendedPrice'},
                                     {path : 'currency>/usd'}],
                           type : 'sap.ui.model.type.Currency',
                           formatOptions: { showMeasure : false }}"
                 numberUnit="{currency>/usd}"
-                numberState="{= ${invoices>ExtendedPrice} > 9 ? 'Success' : 'Error'}"
+                numberState="{= ${northwind>ExtendedPrice} > 9 ? 'Success' : 'Error'}"
             >
-                <firstStatus>
-                    <ObjectStatus text="{path: 'invoices>Status',
-                                    formatter : '.formatter.invoiceStatus'} " />
-                </firstStatus>
             </ObjectListItem>
         </items>
     </List>
