--- a/invoices/SAPUI5/webapp/view/Details.view.xml
+++ b/invoices/SAPUI5/webapp/view/Details.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="logaligroup.SAPUI5.controller.Details" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns:core="sap.ui.core">
+<mvc:View controllerName="logaligroup.SAPUI5.controller.Details" xmlns="sap.m" xmlns:mvc="sap.ui.core.mvc" displayBlock="true" xmlns:core="sap.ui.core" xmlns:logali="logaligroup.SAPUI5.control.">
     <Page title="{i18n>detailPageTitle}" showNavButton="true" navButtonPress=".onNavBack">
         <ObjectHeader title="{northwind>Quantity} x {northwind>ProductName}">
             <attributes>
@@ -11,5 +11,6 @@
                 <ObjectAttribute text="{northwind>CustomerName}" />
             </attributes>
         </ObjectHeader>
+        <logali:ProductRating id="rating" class="sapUiSmallMarginBeginEnd" change=".onRatingChange"/>
     </Page>
 </mvc:View>
